--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:open:mobile": "cypress open --config viewportWidth=410 viewportHeigth=860",
-    "test": "cypress run"
+    "test": "cypress run",
+    "teste:mobile": "cypress run --config viewportWidth=410 viewportHeigth=860"
   },
   "repository": {
     "type": "git",
